[tool.poetry]
name = "token_store_v2"
version = "0.1.0"
description = ""
authors = ["canaparro <marcelo.canaparro@pagefreezer.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
emojis = "^0.7.0"
sqlalchemy = "^2.0.31"
sqlalchemy-continuum = "^1.4.2"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.coverage.run]
relative_files = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
